--- a/index.html
+++ b/index.html
@@ -5,6 +5,5 @@
 <h1> Pokemon Memory Game </h1>
 <h3> Welcome to Pokemon Memory Game </h3>
 <h2> Memory Game</h2>
-    <button type="button" class="btn btn-Start">Start</button>
-    
+    <button type="button" onClick="window.location.href='Untitled-1'">Start</button>
 
