--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head><link rel="stylesheet" type="text/css" href="main.css"></head>
 <body>
-<h1> Pokemon Memory Game </h1>
-<h3> Welcome to Pokemon Memory Game </h3>
-<h2> Memory Game</h2>
-    <button type="button" onClick="window.location.href='Untitled-1'">Start</button>
-
+<h1> HotDog Games </h1>
+<h3> Welcome to HotDog Games </h3>
+<h3> Still in Progress</h3>
+    <button type="button" onClick="window.location.href='Memory Game.html'">Memory Game</button>
+<button type="button" onClick="window.location.href='Bouncingball Game.html'">Bouncing Ball Game</button>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
