--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <h1> HotDog Games </h1>
 <h3> Welcome to HotDog Games </h3>
 <h3> Still in Progress</h3>
+    <h3> Also has ictures</h3>
     <button type="button" onClick="window.location.href='Memory Game.html'">Memory Game</button>
-<button type="button" onClick="window.location.href='Bouncingball Game.html'">Bouncing Ball Game</button>
+<button type="button" onClick="window.location.href='Bouncingball Game.html'">Bouncing Ball Game</button
+    <button type="button" onClick="window.location.href='PokemonPictures.html'">Pokemon Pictures</button>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
