--- a/Memory Game.html
+++ b/Memory Game.html
@@ -3,6 +3,7 @@
 <head><link rel="stylesheet" type="text/css" href="main.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">                                       
      <h2> Memory Game</h2>
+    <p>sometimes doesn't work</p>
 <style>
 div#memory_board{
 	background:#CCC;
